--- a/final/firebase/functions/package.json
+++ b/final/firebase/functions/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.18.3",
     "consolidate": "^0.15.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.3.1",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0",
     "handlebars": "^4.0.12",
